fix for cube on mobile

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -151,7 +151,7 @@ body .wrapper-content {
 			
 			@media (max-width: ($module_max_width+1)) {
 				float: none;
-				margin: 0 auto 20px;
+				margin: 0 auto 20px !important;
 			}
 		}
 	}
